--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="container">
                 <div class="resume__block">
                     <h1 class="contact-info__header">Maria Rocio Espeche</h1>
-                    <h3 class="contact-info__sub-header">Web Full-Stack Developer</h3>
+                    <h3 class="contact-info__sub-header">Full-Stack Web Developer</h3>
 
                     <div class="contact_info_container fh">
                         <div class="contact-info__block"></div>
@@ -75,39 +75,41 @@
                                 </div>
                             </div>
                         </div>
+
+                    </div>
+                    <div class="container">
+                        <div class="resume__block">
+                            <div class="skills">
+                                <h3 class="skills__header">Skills</h3>
+                                <p class="skills__text">HTML5, CSS3, JavaScript, Git, MySQL, React, Scrum, Problem
+                                    solving, Continuous Learning, Team Collaboration, Adaptability</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <div class="resume__block">
+                            <div class="additional-info fv">
+                                <h3 class="additional-info__education-header">Education</h3>
+                                <div class="additional-info__education_items">
+                                    <p class="additional-info__education-university-durability">August 2023 - April 2024
+                                    </p>
+                                    <p class="additional-info__education-university-speciality">Full Stack Web Developer
+                                    </p>
+                                    <p class="additional-info__education-university-name">Digital House</p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="additional-info__languages">
+                            <h3 class="additional-info__languages-header">Languages</h3>
+                            <p class="additional-info__languages-item">Spanish</p>
+                            <p class="additional-info__languages-item">English</p>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container">
-            <div class="resume__block">
-                <div class="skills">
-                    <h3 class="skills__header">Skills</h3>
-                    <p class="skills__text">HTML, CSS, JavaScript, Git, MySQL, React, Scrum, Problem solving, Continuous Learning,
-                        Team Collaboration, Adaptability</p>
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="resume__block">
-                <div class="main-info fh">
-                    <div class="experiences">
-
-                    </div>
-
-                    <div class="additional-info fv">
-                        
-                    </div>
-                </div>
-            </div>
-        </div>
-
-        <div class="additional-info__languages">
-            <h3 class="additional-info__languages-header">Languages</h3>
-            <p class="additional-info__languages-item">Spanish</p>
-            <p class="additional-info__languages-item">English</p>
-        </div>
         </div>
     </main>
 </body>
+
 </html>
